# ComfyUI_MagiHuman

./: .gitignore  .pre-commit-config.yaml  MagiHuman_node.py  README.md  __init__.py  load_utils.py  model_loader_utils.py  pyproject.toml  requirements-nodeps.txt  requirements.txt
example/: TurboV3-Wan22-TinyShallow_7_7.json
example/assets/: prompt.txt
example/base/: config.json
example/distill/: config.json
example/sr_1080p/: config.json
example/sr_540p/: config.json  run.sh
inference/common/: __init__.py  arch.py  config.py  cpu_offload_wrapper.py  sequence_schema.py
inference/infra/: __init__.py
inference/infra/checkpoint/: __init__.py  load_model_checkpoint.py
inference/infra/distributed/: __init__.py  init_dist_env.py  parallel_state.py  utils.py
inference/infra/parallelism/: __init__.py  all_to_all_primitive.py  gather_scatter_primitive.py  ulysses_scheduler.py
inference/model/dit/: __init__.py  dit_model.py  dit_module.py
inference/model/sa_audio/: __init__.py  sa_audio_model.py  sa_audio_module.py
inference/model/t5_gemma/: __init__.py  t5_gemma_model.py
inference/model/turbo_vaed/: __init__.py  turbo_vaed_model.py  turbo_vaed_module.py
inference/model/vae2_2/: __init__.py  vae2_2_model.py  vae2_2_module.py
inference/pipeline/: __init__.py  data_proxy.py  entry.py  pipeline.py  prompt_process.py  scheduler_unipc.py  video_generate.py  video_process.py
inference/utils/: __init__.py  env.py  logger.py  math.py  seed.py  timer.py
